--- a/client/src/pages/Checkout/Checkout.css
+++ b/client/src/pages/Checkout/Checkout.css
@@ -5,7 +5,6 @@
     justify-content: center;
 }
 
-
 .checkoutWrapper {
     width: 90%;
     margin: 20px;
@@ -21,69 +20,82 @@
 .checkoutDetails {
     position: relative;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 .checkoutDetailsWrapper {
+    position: relative;
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: left;
+    transition: transform 1.7s;
 }
 
 .checkoutWrapper h3 {
     margin: 0 10px 5px;
 }
 
-.checkoutButtonsDiv {
-    position: relative;
-    width: 10%;
-    margin: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.shippingWrapper {
+    z-index: 4;
 }
 
-.showPaymentButton {
+.wiperDiv {
+    z-index: 3;
     position: absolute;
-    height: 80px;
+    height: 100%;
+    width: 50%;
+    left: 50%;
+    pointer-events: none;
+    background-color: #f7f7f7;
+    transition: transform 2s;
+}
+
+.wipe-away {
+    transform: translateX(-200%)
+}
+
+.interactiveCheckoutButtonDiv {
+    z-index: 4;
+    width: 100px;
+}
+
+.interactiveCheckoutButton {
+    z-index: 4;
     width: 100%;
-    left: -120%;
     border: none;
     border-radius: 5px;
     background-color: white;
 }
 
-.cloneButton {
-    position: relative;
-    height: 80px;
+.arrowCheckout {
     width: 100%;
-    border: none;
-    border-radius: 5px;
-    background-color: white;
+    fill: #c2634b;
+    transition: rotate 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.showPaymentImg {
-    position: relative;
-    height: 70%;
-    transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1)
+.rotate {
+    rotate: -180deg;
+    animation: colorChange 1s forwards;
 }
 
-.cloneInfoImg {
-    position: relative;
-    height: 70%;
-    transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1)
-}
-
-.slideImgsRight {
-    transform: translateX(100%);
+@keyframes colorChange {
+    0% {fill: #c2634b}
+    50% {fill: #2D848A}
+    75% {transform: translateX(-8px); fill: #2D848A}
+    85% {transform: translateX(12px); fill: #2D848A}
+    100% {transform: translateX(0); fill: #2D848A}
 }
 
 .paymentTerminal {
     position: absolute;
     z-index: -1;
-    left: 20%;
+    top: 14%;
+    left: 0;
+    width: 46.4%;
+    padding-left: 10%;
     flex: 1;
     text-align: left;
 }
@@ -106,4 +118,10 @@
 .placeOrderButton:hover {
     color: #2D848A;
     background-color: white;
+}
+
+@media only screen and (min-width: 1920px) {
+    .paymentTerminal {
+        left: 1.4%;
+    }
 }
