--- a/client/src/pages/ProductDetailPage/ProductDetailPage.css
+++ b/client/src/pages/ProductDetailPage/ProductDetailPage.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: rgb(247 247 247);
 }
 
 .editProductButton {
@@ -35,6 +35,11 @@
 .youMightAlsoLike {
   margin-bottom: 0;
 }
+
+.youMightAlsoLikeDiv {
+ background-color: rgb(255, 255, 255);
+  padding: 5px 15vh;
+  }
 
 @media only screen and (min-width: 1920px) {
   .productDetailsWrapper {
