--- a/client/src/pages/LoginPage/LoginPage.css
+++ b/client/src/pages/LoginPage/LoginPage.css
@@ -1,29 +1,136 @@
 .loginPageDiv {
   display: flex;
-  min-height: 90vh;
-}
-
-.loginPageDiv > div {
-  width: 50%;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  min-height: 89vh;
 }
 
 .loginForm {
-  margin: 20px;
-  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 540px;
   width: 500px;
+  border-radius: 10px;
+  margin: 40px;
+  padding: 40px 0 20px;
+  box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01), 0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09), 0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
   background-color: white;
-  border-radius: 5px;
+}
+
+.loginFormTopText {
+  text-align: center;
+  width: 60%;
+}
+
+.logInTitle {
+  margin-bottom: 10px;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+.logInSubtitle {
+  font-size: 0.725rem;
+  text-align: center;
+  color: grey;
+}
+
+.loginInputDiv {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.loginInputLabel {
+  font-size: 0.8rem;
+  color: grey;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.icon {
+  position: absolute;
+  z-index: 2;
+  left: 12px;
+  bottom: 7px;
+  width: 20px;
+}
+
+.loginInput {
+  height: 40px;
+  padding: 0 0 0 40px;
+  border-radius: 7px;
+  outline: none;
+  border: 1px solid #e5e5e5;
+  filter: drop-shadow(0px 1px 0px #efefef) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
+}
+
+.loginInput:focus {
+  border: 1px solid transparent;
+  box-shadow: 0px 0px 0px 2px #242424;
+  background-color: transparent;
+}
+
+.loginButton {
+  height: 40px;
+  width: 80%;
+  border: 0;
+  border-radius: 7px;
+  cursor: pointer;
+  color: #ffffff;
+  background-color: #115DFC;
+}
+
+.googleLoginButton {
+  height: 40px;
+  width: 80%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  background: #ffffff;
+  border-radius: 7px;
+  outline: none;
+  color: #242424;
+  border: 1px solid #e5e5e5;
+  filter: drop-shadow(0px 1px 0px #efefef)
+    drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
+  cursor: pointer;
+}
+
+.googleLogo {
+  height: 50%;
+}
+
+.noAccount > p {
+  margin: 5px;
+}
+
+.signUpLink {
+  color: black;
 }
 
 /* */
 
+.title {
+  margin: 0;
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: #212121;
+}
+
+.subtitle {
+  font-size: 0.725rem;
+  max-width: 80%;
+  text-align: center;
+  line-height: 1.1rem;
+  color: #8B8E98
+}
+
 .form_container {
-    width: fit-content;
+  width: fit-content;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -58,21 +165,7 @@
     gap: 10px;
   }
   
-  .title {
-    margin: 0;
-    font-size: 1.25rem;
-    font-weight: 700;
-    color: #212121;
-  }
-  
-  .subtitle {
-    font-size: 0.725rem;
-    max-width: 80%;
-    text-align: center;
-    line-height: 1.1rem;
-    color: #8B8E98
-  }
-  
+
   .input_container {
     width: 100%;
     height: fit-content;
@@ -82,13 +175,7 @@
     gap: 5px;
   }
   
-  .icon {
-    width: 20px;
-    position: absolute;
-    z-index: 5;
-    left: 12px;
-    bottom: 9px;
-  }
+
   
   .input_label {
     font-size: 0.75rem;
@@ -136,23 +223,6 @@
     border-radius: 7px;
     outline: none;
     color: #242424;
-    border: 1px solid #e5e5e5;
-    filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    cursor: pointer;
-  }
-  
-  .sign-in_apl {
-    width: 100%;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    background: #212121;
-    border-radius: 7px;
-    outline: none;
-    color: #ffffff;
     border: 1px solid #e5e5e5;
     filter: drop-shadow(0px 1px 0px #efefef)
       drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
